--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -5,12 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar color="myGreen">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Sale Listing</ion-title>
+    <ion-title>Sales</ion-title>
   </ion-navbar>
 
 </ion-header>
