--- a/src/pages/report-listing/report-listing.html
+++ b/src/pages/report-listing/report-listing.html
@@ -21,7 +21,7 @@
         <img src="assets/img/Excel-icon.png" alt="myImage">
       </ion-thumbnail>
       <div (click)="openReport(file)">
-        <h3>{{file.name}}</h3>
+        <h3 class="h3-prop">{{file.name}}</h3>
       </div>
       <button ion-button item-right clear icon-only (click)="openReportOptionsMenu($event, file, i)" color="main">
         <ion-icon name="more"></ion-icon>
