--- a/src/pages/select-purchase/select-purchase.html
+++ b/src/pages/select-purchase/select-purchase.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
 
-  <p text-center *ngIf="displayNoPurchaseMessage">No purchases available for use.</p>
+  <p text-center *ngIf="displayNoPurchaseMessage">No purchases available for use. Must make a purchase for materials to be available for use.</p>
 
   <ion-card *ngFor="let purchase of avaialblePurchaseListing">
     <ion-card-title padding>
