fixed landtype select box
also other slight changes elsewhere with regards to plural nouns used

--- a/src/pages/edit-cycle/edit-cycle.html
+++ b/src/pages/edit-cycle/edit-cycle.html
@@ -31,7 +31,7 @@
     <ion-item>
       <ion-label color="primary" stacked>Land Type</ion-label>
       <ion-select formControlName="landUnit">
-        <ion-option *ngFor="let unit of landUnitList">{{unit}}</ion-option>
+        <ion-option *ngFor="let unit of landUnitList" [value]="unit.value">{{unit.name}}</ion-option>
       </ion-select>
     </ion-item>
 
