--- a/src/pages/labourer-listing/labourer-listing.html
+++ b/src/pages/labourer-listing/labourer-listing.html
@@ -7,8 +7,8 @@
 <ion-header>
 
   <ion-navbar color="myGreen">
-    <!-- <ion-title>Labourers</ion-title> -->
-    <ion-searchbar right no-border [(ngModel)]="searchLabourer" [formControl]="searchControl"></ion-searchbar>
+    <!-- <ion-title>Select Labourer to Assign Job</ion-title> -->
+    <ion-searchbar right no-border [(ngModel)]="searchLabourer" [formControl]="searchControl" placeholder="Search Labourer"></ion-searchbar>
   </ion-navbar>
 
 </ion-header>
