--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -26,8 +26,8 @@
         <img src="{{purchase.materialImagePath}}" alt="myImage">
       </ion-thumbnail>
       <p>{{purchase.typeName}}</p>
-      <p>Purchased: {{purchase.quantityPurchased}} {{purchase.units}}s</p>
-      <p>Remaining: {{purchase.quantityRemaining}} {{purchase.units}}s</p>
+      <p>Purchased: {{purchase.quantityPurchased}} {{purchase.units}}</p>
+      <p>Remaining: {{purchase.quantityRemaining}} {{purchase.units}}</p>
       <p>Cost: ${{purchase.cost | number: '.2-2'}}</p>
       <p>{{purchase.datePurchased | date: 'fullDate'}}</p>
 
