fixed setup page errors
disabled county button when country isn't selected, and set default alarm time to 4:00pm

--- a/src/pages/initialize/initialize.html
+++ b/src/pages/initialize/initialize.html
@@ -26,8 +26,8 @@
 
     <ion-item>
       <ion-label color="primary" stacked>Select Your {{subDivisionTitle  | titlecase}}</ion-label>
-      <ion-select [(ngModel)]="userCounty" name="myCounty" >
-        <ion-option [disabled]="!userCountry.id" *ngFor="let county of counties" [value]="county">{{county| titlecase}}</ion-option>
+      <ion-select [(ngModel)]="userCounty" name="myCounty" [disabled]="countryCheck">
+        <ion-option *ngFor="let county of counties" [value]="county">{{county| titlecase}}</ion-option>
       </ion-select>
     </ion-item>
 
