Changes to a few pages
Made a couple changes as shown on the report

--- a/src/pages/cycle-data/cycle-data.html
+++ b/src/pages/cycle-data/cycle-data.html
@@ -70,7 +70,7 @@
             </button>
           </ion-col>
           <ion-col>
-              <button ion-button icon-left clear small color="light" (click)="goToSelectPurchasePage(material.id)">
+              <button ion-button icon-left clear small color="light" (click)="goToSelectPurchasePage(material.id,material.name)">
                 <ion-icon name="add-circle"></ion-icon>
                 <div>Use {{material.name}}</div>
               </button>
