--- a/src/pages/use-material/use-material.html
+++ b/src/pages/use-material/use-material.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="myGreen">
-    <ion-title>Use Material</ion-title>
+    <ion-title>Use {{purchaseName}}</ion-title>
   </ion-navbar>
 
 </ion-header>
