added order by setting to a few pages

--- a/src/pages/labourer-listing/labourer-listing.html
+++ b/src/pages/labourer-listing/labourer-listing.html
@@ -8,7 +8,7 @@
 
   <ion-navbar color="myGreen">
     <!-- <ion-title>Select Labourer to Assign Job</ion-title> -->
-    <ion-searchbar right no-border [(ngModel)]="searchLabourer" [formControl]="searchControl" placeholder="Search Labourer"></ion-searchbar>
+    <ion-searchbar right no-border [(ngModel)]="searchLabourer" [formControl]="searchControl" placeholder="Search Labourers"></ion-searchbar>
   </ion-navbar>
 
 </ion-header>
