--- a/src/pages/new-cycle/new-cycle.html
+++ b/src/pages/new-cycle/new-cycle.html
@@ -37,11 +37,11 @@
     <h4>Select the Quantity of land that you are using</h4>
     <form [formGroup]="newCycle">
       <ion-item>
-        <ion-label color="primary" stacked>Cycle Name</ion-label>
+        <ion-label color="primary" stacked>Cycle Name (Required)</ion-label>
         <ion-input type="text" placeholder="Enter Name of cycle" name="cycleName" formControlName="name"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label color="primary" stacked>Land Quantity</ion-label>
+        <ion-label color="primary" stacked>Land Quantity (Required)</ion-label>
         <ion-input type="number" placeholder="Land Quantity" name="landQuantity" formControlName="landQuantity"></ion-input>
       </ion-item>
       <ion-item>
