--- a/src/pages/new-labourer/new-labourer.html
+++ b/src/pages/new-labourer/new-labourer.html
@@ -16,12 +16,12 @@
 <ion-content padding>
   <form [formGroup]="newLabourer">
     <ion-item>
-      <ion-label color="primary" stacked>First Name</ion-label>
+      <ion-label color="primary" stacked>First Name (Required)</ion-label>
       <ion-input type="text" placeholder="Enter First Name" name="firstName" formControlName="firstName"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label color="primary" stacked>Last Name</ion-label>
+      <ion-label color="primary" stacked>Last Name (Required)</ion-label>
       <ion-input type="text" placeholder="Enter Last Name" name="lastName" formControlName="lastName"></ion-input>
     </ion-item>
 
