--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -11,6 +11,11 @@
           <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>Purchases</ion-title>
+        <ion-buttons end>
+          <button ion-button icon-only (click)="presentPopover($event)">
+            <ion-icon name="more"></ion-icon>
+          </button>
+        </ion-buttons>
       </ion-navbar>
 
 </ion-header>
