--- a/src/pages/harvest-listing/harvest-listing.html
+++ b/src/pages/harvest-listing/harvest-listing.html
@@ -27,7 +27,8 @@
       </ion-card-content>
 
       <ion-row padding *ngIf="displayMakeSaleButton">
-          <button ion-button block (click)="goToNewSalePage(harvest)" color="myGreen">Make Sale <ion-icon name="pricetags"></ion-icon></button>
+          <p ion-text color="danger" *ngIf="harvest.quantityRemaining<=0">Not enough in stock to sell</p>
+          <button ion-button block *ngIf="harvest.quantityRemaining==null || harvest.quantityRemaining>0" (click)="goToNewSalePage(harvest)" color="myGreen">Make Sale <ion-icon name="pricetags"></ion-icon></button>
       </ion-row>
     </ion-card>
   </ion-list>
