fix sort error when switching pages and change sort icon

--- a/src/pages/purchase-listing/purchase-listing.html
+++ b/src/pages/purchase-listing/purchase-listing.html
@@ -13,7 +13,7 @@
         <ion-title>Purchases</ion-title>
         <ion-buttons end>
           <button ion-button icon-only (click)="presentPopover($event)">
-            <ion-icon name="more"></ion-icon>
+            <ion-icon name="md-funnel"></ion-icon>
           </button>
         </ion-buttons>
       </ion-navbar>
