--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
     <ion-title>Cycles</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
+        <ion-icon name="md-funnel"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
