--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -12,7 +12,7 @@
     <ion-title>Sales</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
+        <ion-icon name="md-funnel"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
