--- a/src/pages/select-cycle/select-cycle.html
+++ b/src/pages/select-cycle/select-cycle.html
@@ -10,7 +10,7 @@
     <ion-title>Assign Labour</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
+        <ion-icon name="md-funnel"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
