--- a/src/pages/edit-purchase/edit-purchase.html
+++ b/src/pages/edit-purchase/edit-purchase.html
@@ -23,7 +23,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-label color="primary" stacked>Select</ion-label>
+      <ion-label color="primary" stacked>Select {{selectedMaterial}}</ion-label>
       <ion-select [(ngModel)]="selectedMaterialType" name="materialType">
         <ion-option *ngFor="let materialType of materialTypeList" [value]="materialType.name">{{materialType.name}}</ion-option>
       </ion-select>
