--- a/src/pages/harvest-listing/harvest-listing.html
+++ b/src/pages/harvest-listing/harvest-listing.html
@@ -8,6 +8,11 @@
 
   <ion-navbar color="myGreen">
     <ion-title>Harvest Listing</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="md-funnel"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
